BZR-180 Added /spaces/{spaceId}/users/{userId} endpoint + added creat… (#26)
