# src/main/resources/openapi/bazar-space-openapi.yaml
@@ -66,6 +66,31 @@ paths:
             "application/json":
               schema:
                 $ref: "#/components/schemas/GetUsersInSpaceResponse"
+  /spaces/{spaceId}/users/{userId}:
+    get:
+      tags:
+        - space-controller
+      operationId: getUserInSpace
+      parameters:
+        - name: spaceId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            "application/json":
+              schema:
+                $ref: "#/components/schemas/UserInSpaceDto"
   /space/{spaceId}:
     delete:
       tags:
@@ -176,6 +201,7 @@ components:
         - userName
         - firstName
         - lastName
+        - creator
       properties:
         userId:
           type: string
@@ -194,6 +220,9 @@ components:
         lastName:
           type: string
           description: lastName from bazar-persona/users
+        creator:
+          type: boolean
+          description: Is user creator of the space
         role:
           type: object
           $ref: '#/components/schemas/SimpleRoleDto'
